Correct respnsive issues in mobile

--- a/style/_mobile.scss
+++ b/style/_mobile.scss
@@ -12,12 +12,18 @@
     text-align: center;
   }
 
+  nav {
+    margin-left: 0%;
+  }
   .dropDown {
     flex-direction: column-reverse;
     float: left;
     display: none;
   }
 
+  .dropDown {
+    padding-right: 200px;
+  }
   .dropDown li a {
     width: 100%;
 
@@ -67,7 +73,15 @@
     align-items: center;
     flex-wrap: wrap;
   }
+  .labelFont {
+    font: normal normal bold 1em Heebo;
+    width: 100%;
 
+  }
+  textarea{
+    width: 100%;
+
+  }
   .emptyLine {
     grid-column: 1/3;
     grid-row: 1;
