Add link from project landing pages to main html

--- a/style/_mobile.scss
+++ b/style/_mobile.scss
@@ -40,6 +40,11 @@
     display: block;
   }
 
+  #rectangle55P {
+    width: 70%;
+    
+  }
+
   .rectangle55Grid {
     grid-template-columns: repeat(2, 1fr);
   }
