--- a/style/_portal.scss
+++ b/style/_portal.scss
@@ -6,6 +6,8 @@
 
 html, body {
   overflow-x: hidden;
+  // margin-left: 5%;
+  // margin-right: 5%;
 }
 html {
   scroll-behavior: smooth;
@@ -159,14 +161,16 @@ nav {
 }
 
 #rectangle56P1 {
-  /* width: 100%; */
+  
   text-align: center;
   font: normal normal normal 1.3rem Heebo;
   color: #3a3a3a;
 }
 
-#rectangle56Button {
+
+  #downloadResumeButton{
   width: 260px;
+  text-align: center;
   background-color: #1ae0ec;
   border: none;
   border-radius: 25px;
@@ -196,11 +200,11 @@ nav {
   font: normal normal 900 2rem Heebo;
   letter-spacing: 0px;
   color: #3a3a3a;
-  opacity: 1;
+  
 }
 
 #rectangle55P {
-  width: 576px;
+  width: 40%;
   font: normal normal normal 1.3rem Heebo;
   letter-spacing: 0px;
   color: #3a3a3a;
