--- a/projects/projectName1/style/projectLandingPage.css
+++ b/projects/projectName1/style/projectLandingPage.css
@@ -31,7 +31,7 @@
 
   background-color: #13e8f163;
   display: flex;
-  
+
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -53,16 +53,25 @@
   padding-bottom: 11vh;
 }
 
+.buttonDiv {
+  display: flex;
+
+}
+.colProj2 {
+  margin-top: 5%;
+  width: 15vw;
+  border-radius: 5%;
+
+  display: flex;
+  justify-content: center;
+}
 .projectLinkButton {
-  width: 150px;
-  padding: 4px 10px;
   background: #1ae0ec 0% 0% no-repeat padding-box;
-  border-radius: 15px;
-  font: normal normal medium 14px Heebo;
+  font: normal normal medium 1em Heebo;
   color: #2c2c2c;
   text-decoration: none;
 }
-.projectLinkButton:hover{
+.projectLinkButton:hover {
   background: lightskyblue;
 }
 
@@ -103,8 +112,26 @@
   opacity: 1;
 }
 
-@media only screen and (max-width: 820px) {
+@media only screen and (max-width: 1200px) {
   .imageOfWebSite {
     width: 80vw;
   }
+
+  .colProj2 {
+    font-size: 1em;
+    margin-top: 5%;
+    width: 30vw;
+    background: #1ae0ec 0% 0% no-repeat padding-box;
+    border-radius: 5%;
+  }
+  .buttonDiv {
+    flex-direction: column;
+  }
+  @media only screen and (max-width: 800px) {
+    
+  
+    .colProj2 {
+            width: 59vw;
+    }
+  
 }
