Add nav mouse hoover functionality

--- a/style/_portal.scss
+++ b/style/_portal.scss
@@ -43,15 +43,15 @@ header {
 
 
 
-.dropDown li a {
-  display: block;
-  width: 100px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 1.2em;
+.menueItem {
+  // // display: block;
+  // // width: 100px;
+  // text-align: center;
+  // text-decoration: none;
+  font-size: 1.2rem;
   color: #639;
   font-family: "Heebo";
-  height: fit-content;
+  // height: fit-content;
 }
 
 /* ---------------------------------------- */
