--- a/style/_portal.scss
+++ b/style/_portal.scss
@@ -51,8 +51,11 @@ header {
   font-size: 1.2rem;
   color: #639;
   font-family: "Heebo";
+  opacity: 1;
   // height: fit-content;
 }
+
+
 
 /* ---------------------------------------- */
 /* path1 */
