--- a/style/main.css
+++ b/style/main.css
@@ -41,6 +41,7 @@ header {
   font-size: 1.2rem;
   color: #639;
   font-family: "Heebo";
+  opacity: 1;
 }
 
 /* ---------------------------------------- */
