--- a/projects/reversi/style/reversi.css
+++ b/projects/reversi/style/reversi.css
@@ -1,6 +1,6 @@
 :root {
-  --circle-width: 56px;
-  --circle-hight: 56px;
+  --circle-width: 50px;
+  --circle-hight: 50px;
   --cell-width: 70px;
   --cell-hight: 70px;
 }
@@ -17,7 +17,6 @@
   background-color: white;
   border-radius: 50%;
   border: 2px solid black;
-  
 }
 
 .stoneBlack {
@@ -30,45 +29,40 @@
 }
 
 table {
-    border-collapse: collapse; /* Removes space between cells */
-    
+  border-collapse: collapse; /* Removes space between cells */
 }
 
 .cellR {
   border: 2px solid black;
   width: var(--cell-width);
   height: var(--cell-hight);
-  
-
-
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* 
+    text-align: center;
+    vertical-align: middle; */
 }
-.tableReversi{
-    
-    /* position: absolute; */
- 
-    background-color: rgba(255, 255, 255, 0.5); /*Adjust the color and opacity*/
-    
-    
-}
-.divTable{
-    background-image: url("./../images/background1.jpg") ;
-    
-    background-size: cover;
-    /* opacity: 0.5; */
-    
-   
-    /* background-color: blanchedalmond; */
-    
-    padding: var(--cell-width);
+.tableReversi {
+  /* position: absolute; */
 
+  background-color: rgba(255, 255, 255, 0.5); /*Adjust the color and opacity*/
+}
+.divTable {
+  background-image: url("./../images/background1.jpg");
+
+  background-size: cover;
+
+  padding: var(--cell-width);
 }
 
-
-.board{
-display:flex;
-justify-content: center;
-
-
+.board {
+  display: flex;
+  justify-content: center;
 }
 
-
+.centerCircle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
