fix naming convention

--- a/projects/reversi/style/reversi.css
+++ b/projects/reversi/style/reversi.css
@@ -66,3 +66,16 @@ table {
   align-items: center;
   justify-content: center;
 }
+
+
+
+.customCol{
+    border: 1px solid grey;
+    padding: 5px;
+    
+}
+
+.customRow{
+    
+    
+}
