--- a/projects/store/style/store.css
+++ b/projects/store/style/store.css
@@ -1,12 +1,49 @@
 .carousel-img {
-
-    height: 70vh; /* Set your desired height */
-    width: 70vw; /* Set your desired width */
-    object-fit: contain;
+  height: 80vh; /* Set your desired height */
+  width: 80vw; /* Set your desired width */
+  object-fit: contain;
 }
 
-.page1{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.page1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+.carousel-inner-set {
+  background-color: blue;
+}
+.product-line {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  margin-top: 50px;
+}
+.card-r {
+  margin-left: 10px;
+}
+
+.full-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.card {
+  min-height: 350px;
+}
+.card > img {
+  height: 100px;
+  width: fit-content;
+}
+
+.title4 {
+  text-align: right;
+  margin-right: 10px;
+}
+.title5 {
+  text-align: center;
+}
+
+/* .card-body>p{
+    text-tranc
+} */
