--- a/projects/reversi/style/reversi.css
+++ b/projects/reversi/style/reversi.css
@@ -149,3 +149,57 @@ flex-direction: row;
   justify-content: center;
   align-items: center;
 }
+.restart{
+  font-size: 2rem;
+}
+/* 
+.overlay {
+  
+
+  opacity: 80%;
+  background-color: lightblue;
+  content-visibility:hidden;
+  text-align: center;
+}
+.overlay > span{
+  font-size: 3rem;
+  font-weight: bolder;
+  
+}
+
+#containerID{
+  position: absolute;
+  top: 30%;
+  left: 25%;
+  background-color: lightblue;
+  border: 2px solid black; 
+} */
+
+
+
+.custom-alert {
+  display: none; /* Hidden by default */
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: lightgrey; /* Red */
+  color: black;
+  border-radius: 5px;
+  
+  
+}
+#paId{
+  font-size:4rem  ;
+  font-weight: bolder;
+}
+
+.custom-alert .closebtn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: black;
+  
+  cursor: pointer;
+}
