progress with managu

--- a/projects/manageu/style/manageu.css
+++ b/projects/manageu/style/manageu.css
@@ -1,5 +1,9 @@
 #changeModalWindows{
-    visibility: hidden;
+    /* visibility: hidden; */
     /* visibility: visible; */
-    display: block;
+    /* display: block; */
+  }
+
+  #recID{
+    visibility: hidden;
   }
