--- a/projects/myaccount/style/myaccount.css
+++ b/projects/myaccount/style/myaccount.css
@@ -1,9 +1,30 @@
 #add-on{
     display: flex;
     flex-direction: column;
+    margin-left: 2px;
 }
 #btn-add-on{
     
     font-size: 10px;
     text-align: center;
 }
+body, html {
+    height: 100%;
+    margin: 0;
+  }
+.background{
+    height: 100%;
+    background-color: lightgray;
+}
+
+#main{
+    margin-left: 2px;
+}
+
+
+@media only screen and (max-width: 600px) {
+    #main, #add-on{
+        margin-left: 0px;
+    }
+    
+  }
