--- a/style/_mobile.scss
+++ b/style/_mobile.scss
@@ -12,7 +12,6 @@
     text-align: center;
   }
 
-
   .dropDown {
     flex-direction: column-reverse;
     float: left;
@@ -38,12 +37,11 @@
     display: block;
   }
 
-  #rectangle55P {
+  #work_HTML_CSSP {
     width: 70%;
-    
   }
 
-  .rectangle55Grid {
+  .work_HTML_CSSGrid {
     grid-template-columns: repeat(2, 1fr);
   }
 
@@ -64,7 +62,7 @@
   //   margin-left: 10%;
   // }
 
-  .rectangle55Grid {
+  .work_HTML_CSSGrid {
     grid-template-columns: repeat(1, 1fr);
   }
 
@@ -79,11 +77,9 @@
   .labelFont {
     font: normal normal bold 1em Heebo;
     width: 100%;
-
   }
-  textarea{
+  textarea {
     width: 100%;
-
   }
   .emptyLine {
     grid-column: 1/3;
