--- a/style/_portal.scss
+++ b/style/_portal.scss
@@ -4,21 +4,19 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   overflow-x: hidden;
-  
 }
 html {
   scroll-behavior: smooth;
- 
 }
-
 
 /* Header section */
 /* ---------------------------------------- */
 header {
   width: 100%;
-  
+
   background-color: white;
   position: fixed;
   border-top: 2px solid rgba(19, 232, 241, 0.3882352941);
@@ -31,7 +29,7 @@ header {
 
 #profileImage {
   width: 62px;
-  
+
   margin-left: 15%;
   border-radius: 31px;
 }
@@ -40,8 +38,6 @@ header {
   width: 79px;
   height: 35px;
 }
-
-
 
 .menueItem {
   // // display: block;
@@ -55,12 +51,10 @@ header {
   // height: fit-content;
 }
 
-
-
 /* ---------------------------------------- */
-/* path1 */
+/* openArea */
 /* ---------------------------------------- */
-.path1 {
+.openArea {
   padding-top: 100px;
 
   background: #13e8f163 0% 0% no-repeat padding-box;
@@ -70,7 +64,7 @@ header {
   align-items: center;
 }
 
-#path1H2 {
+#openAreaH2 {
   text-align: center;
   font-family: "Heebo";
   font-size: 5rem;
@@ -82,7 +76,7 @@ header {
   opacity: 1;
 }
 
-#path1P {
+#openAreaP {
   width: 44%;
   text-align: center;
   font-family: "Heebo";
@@ -96,9 +90,9 @@ header {
   opacity: 1;
 }
 
-/* rectangle22 */
+/* tech */
 /* ---------------------------------------- */
-.rectangle22 {
+.tech {
   top: 541px;
   left: 0px;
   background: #ffffff 0% 0% no-repeat padding-box;
@@ -110,7 +104,7 @@ header {
   flex-wrap: wrap;
 }
 
-.rectangle22Image {
+.techImage {
   width: 100px;
   height: 100px;
 }
@@ -149,14 +143,12 @@ header {
 }
 
 #rectangle56P1 {
-  
   text-align: center;
   font: normal normal normal 1.3rem Heebo;
   color: #3a3a3a;
 }
 
-
-  #downloadResumeButton{
+#downloadResumeButton {
   width: 260px;
   text-align: center;
   background-color: #1ae0ec;
@@ -173,9 +165,9 @@ header {
   background-color: RoyalBlue;
 }
 
-/* rectangle55 */
+/* work_HTML_CSS */
 /* ---------------------------------------- */
-.rectangle55 {
+.work_HTML_CSS {
   padding-top: 150px;
   background: #f6f6f6 0% 0% no-repeat padding-box;
   display: flex;
@@ -184,14 +176,13 @@ header {
   /* justify-content: space-evenly; */
 }
 
-.rectangle55H2 {
+.work_HTML_CSSH2 {
   font: normal normal 900 2rem Heebo;
   letter-spacing: 0px;
   color: #3a3a3a;
-  
 }
 
-#rectangle55P {
+#work_HTML_CSSP {
   width: 40%;
   font: normal normal normal 1.3rem Heebo;
   letter-spacing: 0px;
@@ -199,7 +190,7 @@ header {
   text-align: center;
 }
 
-.rectangle55Grid {
+.work_HTML_CSSGrid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
@@ -309,8 +300,6 @@ header {
   opacity: 1;
 }
 
-
-
 /* rectangle6 */
 /* ---------------------------------------- */
 .socialMedia {
@@ -352,11 +341,3 @@ header {
   color: #2c2c2c;
 }
 
-/* rectangle43 */
-/* ---------------------------------------- */
-.rectangle43 {
-  width: 100%;
-  height: 51px;
-  /* UI Properties */
-  background: #000000 0% 0% no-repeat padding-box;
-} /*# sourceMappingURL=index.css.map */
