--- a/style/_mobile.scss
+++ b/style/_mobile.scss
@@ -45,7 +45,7 @@
     grid-template-columns: repeat(2, 1fr);
   }
 
-  socialMediaGrid {
+  social-media-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 
@@ -54,7 +54,7 @@
 }
 
 @media only screen and (max-width: 820px) {
-  #profileImage {
+  #profile-Image {
     margin-left: 1%;
   }
 
@@ -86,7 +86,7 @@
     grid-row: 1;
     display: none;
   }
-  .socialMediaGrid {
+  .social-media-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(6, 1fr);
