--- a/style/_portal.scss
+++ b/style/_portal.scss
@@ -11,6 +11,44 @@ body {
 html {
   scroll-behavior: smooth;
 }
+.card {
+  margin: auto; 
+  height: 100%;
+  
+}
+.card-body{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  visibility: hidden;
+  
+  transform: scale(0,1);
+  transition: transform 0.5s ease-in-out, visibility 
+}
+.card:hover .overlay {
+  visibility: visible;
+  transform: scale(1);
+}
+
+
+
 
 /* Header section */
 /* ---------------------------------------- */
@@ -180,6 +218,7 @@ header {
   font: normal normal 900 2rem Heebo;
   letter-spacing: 0px;
   color: #3a3a3a;
+  direction: rtl;
 }
 
 #work_HTML_CSSP {
