--- a/style/_portal.scss
+++ b/style/_portal.scss
@@ -58,6 +58,29 @@ html {
 }
 
 
+.overlay-js {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  visibility: hidden;
+  
+  transform: scale(1,0);
+  transition: transform 0.5s ease-in-out, visibility 
+}
+.card:hover .overlay-js {
+  visibility: visible;
+  transform: scale(1);
+}
+
+
 
 
 /* Header section */
@@ -231,7 +254,7 @@ header {
   direction: rtl;
 }
 
-#work_HTML_CSSP {
+.work_HTML_CSSP {
   width: 40%;
   font: normal normal normal 1.3rem Heebo;
   letter-spacing: 0px;
