--- a/style/_portal.scss
+++ b/style/_portal.scss
@@ -7,6 +7,7 @@
 html,
 body {
   overflow-x: hidden;
+  background-color: lightgoldenrodyellow;
   
 }
 html {
@@ -203,7 +204,7 @@ header {
 .profile-Image1 {
   width: 141px;
   border-radius: 141px;
-  text-align: center;
+  // text-align: center;
 }
 
 .aboutH2 {
@@ -375,8 +376,8 @@ header {
 /* rectangle6 */
 /* ---------------------------------------- */
 .socialMedia {
-  width: 100%;
-  height: 200px;
+  // width: 100%;
+  // height: 200px;
   /* UI Properties */
   background: #1ae0ec 0% 0% no-repeat padding-box;
   display: flex;
