--- a/style/main.css
+++ b/style/main.css
@@ -7,6 +7,7 @@
 html,
 body {
   overflow-x: hidden;
+  background-color: lightgoldenrodyellow;
 }
 
 html {
@@ -185,7 +186,6 @@ header {
 .profile-Image1 {
   width: 141px;
   border-radius: 141px;
-  text-align: center;
 }
 
 .aboutH2 {
@@ -358,8 +358,6 @@ header {
 /* rectangle6 */
 /* ---------------------------------------- */
 .socialMedia {
-  width: 100%;
-  height: 200px;
   /* UI Properties */
   background: #1ae0ec 0% 0% no-repeat padding-box;
   display: flex;
