--- a/projects/flag/style/flag.css
+++ b/projects/flag/style/flag.css
@@ -1,10 +1,89 @@
-.input-div{
-     width: 80%;
-     
-     
+.input-div {
+  display: flex;
+  flex-direction: row;
+  margin-top: 5vh;
 }
 
-.container-div{
-width: 70%;
-
+.field-div {
+  margin-right: 10px;
 }
+
+.btn-div {
+  width: 50px;
+}
+
+.container-div {
+  width: 30%;
+  border-width: 2px;
+  border-color: black;
+  border: solid;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: rgb(227, 227, 223);
+}
+
+.card-div {
+  border-width: 3px; /* Adjust the size as needed */
+  border-style: solid; /* Ensure the border is solid */
+  border-color: blue;
+}
+
+.img-div {
+  border-width: 3px; /* Adjust the size as needed */
+  border-style: solid; /* Ensure the border is solid */
+  border-color: black;
+}
+
+#cardId {
+  margin: 5vh;
+}
+
+#boarderCountries {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 10px;
+  /* border-width: 2px;
+  border-color: black;
+  border: solid; */
+}
+#borders-country-header {
+  
+  color: blue;
+ 
+}
+#border{
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     background-color: rgb(227, 227, 223)
+}
+
+#bg-image {
+     background-image: ;
+     background-image: url("./../image/old_map.jpg");
+     height: 100vh;
+     background-position: center;
+     background-repeat: no-repeat;
+     background-size: cover;
+   }
+
+   @media only screen and (max-width: 600px) {
+  
+     .container-div {
+          width: 100%;
+         
+        }
+    
+        #boarderCountries {
+   width: 100%;
+          flex-direction: column;
+          justify-content: center;
+   
+        }
+        
+
+   }
+ 
