--- a/projects/guessTheNumber/css/guessTheNumber.css
+++ b/projects/guessTheNumber/css/guessTheNumber.css
@@ -1,8 +1,21 @@
 #div-css{
+    
+    background-color: beige;
+    opacity: .8;
+    margin-top: 30px
+}
 
+#main{
+
+    ;
     background-image: url("./../image/guessthenumber.jpg");
-    height: 100%;
+    height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    
+}
+
+#all{
+    background-color: bisque;
 }
