--- a/projects/store/style/store.css
+++ b/projects/store/style/store.css
@@ -44,31 +44,35 @@
   text-align: center;
 }
 
-.newText{
-font: bold;
-color: aliceblue;
+
+.h5{
+  color:white
+}
+#branches{
+  background-color:beige;
+  
 }
 
 
-@media only screen and (max-width: 600px) {
-    body {
-      /* background-color: lightblue; */
-    }
-
-.newText{
-    font-size: medium;
+#product-line-id {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
+.card-body {
+  flex: 1 1 auto;
+}
 
-.product-line {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-content: center;
-    margin-top: 50px;
-  }
-  .card-r {
-    margin-bottom: 10px;
-  }
+.open-hours{
+display: flex;
+flex-direction: column;
 
+  
+}
+.sticky{
+   
+    position: sticky;
+    top: 0;
+    z-index: 1000; /* Ensure it stays on top */
   }
