Connect all projects to Gallery

--- a/projects/flag/style/flag.css
+++ b/projects/flag/style/flag.css
@@ -60,7 +60,7 @@
 
 #bg-image {
   background-image: ;
-  background-image: url("./../image/old_map.jpg");
+  background-image: url("./../images/old_map.jpg");
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
