--- a/projects/guessTheNumber/style/guessTheNumber.css
+++ b/projects/guessTheNumber/style/guessTheNumber.css
@@ -8,7 +8,7 @@
 #main{
 
     
-    background-image: url("./../image/guessthenumber.jpg");
+    background-image: url("./../images/guessthenumber.jpg");
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
