--- a/projects/manageu/style/manageu.css
+++ b/projects/manageu/style/manageu.css
@@ -1,6 +1,9 @@
 
 body {
   background-image: url('../images/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover; 
+  
   
 }
 
